--- a/style/index.css
+++ b/style/index.css
@@ -1,5 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,500,80);
 
+*{
+    scroll-behavior: smooth;
+}
 body, html {
     font-family: 'Montserrat', sans-serif;
     background: rgb(35, 39, 42);
@@ -8,7 +11,6 @@ body, html {
     width: 100%;
     margin: 0;
     padding: 0;
-    scroll-behavior: smooth;
     overflow-x: hidden;
     color: white;
     background-image: url("https://arcticstudio.netlify.app/Storage/background.png");
@@ -16,8 +18,6 @@ body, html {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    
-    scroll-behavior: smooth;
 }
 
 .noSelect {
