--- a/style/index.css
+++ b/style/index.css
@@ -1,8 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,500,80);
-
-*{
+* {
     scroll-behavior: smooth;
 }
+
 body, html {
     font-family: 'Montserrat', sans-serif;
     background: rgb(35, 39, 42);
@@ -20,6 +20,10 @@ body, html {
     background-size: cover;
 }
 
+*::-webkit-scrollbar {
+    display: none;
+  }
+
 .noSelect {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -31,7 +35,7 @@ body, html {
 
 /*HEADER*/
 
-.page{
+.page {
     position: fixed;
     height: 100%;
     width: 100%;
@@ -39,7 +43,7 @@ body, html {
     overflow: auto;
 }
 
-.content{
+.content {
     height: 100%;
     width: 100%;
 }
@@ -157,10 +161,9 @@ body, html {
     filter: invert(100);
 }
 
-.icons{
+.icons {
     text-align: center;
     padding-top: 50px;
-    
 }
 
 .icons img {
@@ -174,18 +177,33 @@ body, html {
     cursor: pointer;
 }
 
-.users{
+.users {
     width: 100%;
     background: rgba(0, 0, 0, 0.884);
     padding: 10px 0px 10px 0px;
     text-align: center;
-
     font-size: 35px;
 }
+
 /*ABOUT US*/
-.AboutUsTitle{
+
+.AboutUsTitle {
     text-align: center;
     font-size: 45px;
     margin-top: 100px;
     font-weight: bolder;
+}
+
+.AboutUsParagraph {
+    text-align: center;
+}
+
+.AboutUsParagraph p {
+    font-size: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.AboutUsParagraph p a {
+    color: rgb(152, 212, 236);
 }
