--- a/style/index.css
+++ b/style/index.css
@@ -113,6 +113,11 @@ a {
     z-index: 10;
 }
 
+.nav a:hover{
+    cursor: pointer;
+    color: rgb(168, 168, 168);
+}
+
 .nav .t:hover {
     cursor: pointer;
     color: rgb(185, 185, 185);
