added data for every project page
added data for every project page

--- a/projects/project.css
+++ b/projects/project.css
@@ -15,8 +15,10 @@
     margin-left: auto;
     border: 2px solid white;
     border-radius: 25px;
-    padding: 5px;
+    padding: 1px;
     width: 150px;
+
+    background-color: white;
 }
 
 .Invite {
