--- a/style/index.css
+++ b/style/index.css
@@ -13,7 +13,7 @@ body, html {
     padding: 0;
     overflow-x: hidden;
     color: white;
-    background-image: url("https://arcticstudio.netlify.app/Storage/background.png");
+    background-image: url("https://arcticstudio.netlify.app/Storage/background.webp");
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
