changed a lot of things
changed a lot of things

--- a/style/merch.css
+++ b/style/merch.css
@@ -1,8 +1,1 @@
-.ICON{
-    font-size: 75px;
-}
-
-.TITLE{
-    margin-top: -50px;
-    font-size: 35px;
-}
+.ICON{font-size:75px}.TITLE{margin-top:-50px;font-size:35px}
