--- a/style/404.css
+++ b/style/404.css
@@ -1,35 +1,1 @@
-.Middle{
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.Smiley{
-    font-size: 55px;
-}
-
-.NotFound{
-    font-size: 50px;
-}
-
-.BackToHomePage{
-    width: fit-content;
-}
-
-.BackToHomePage button{
-    padding: 10px;
-    border: 2px solid white;
-    background-color: transparent;
-    color: white;
-    border-radius: 25px;
-}
-
-.BackToHomePage button:focus{
-    outline: none;
-}
-.BackToHomePage button:hover{
-    transform: scale(1.05);
-    cursor: pointer;
-}
+.Middle{text-align:center;position:absolute;top:50%;left:50%;transform:translate(-50%,-50%)}.Smiley{font-size:55px}.NotFound{font-size:50px}.BackToHomePage{width:fit-content}.BackToHomePage button{padding:10px;border:2px solid #fff;background-color:transparent;color:#fff;border-radius:25px}.BackToHomePage button:focus{outline:0}.BackToHomePage button:hover{transform:scale(1.05);cursor:pointer}
