--- a/style/index.css
+++ b/style/index.css
@@ -1,446 +1,1 @@
-@import url(https://fonts.googleapis.com/css?family=Montserrat:400,500,80);
-* {
-    scroll-behavior: smooth;
-}
-
-body, html {
-    font-family: 'Montserrat', sans-serif;
-    background: rgb(35, 39, 42);
-    background: linear-gradient(135deg, rgb(35, 39, 42) 0%, rgb(35, 39, 42) 100%);
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden;
-    color: white;
-    background-image: url("https://arcticstudio.netlify.app/Storage/background.webp");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-}
-
-a {
-    color: rgb(152, 212, 236);
-}
-
-a:hover{
-    cursor: pointer;
-}
-
-/*SCROLL BAR DESIGN*/
-
-::-webkit-scrollbar {
-    width: 5px;
-}
-
-::-webkit-scrollbar-track {
-    background: gainsboro;
-    border-radius: 5px;
-    margin-bottom: 89px;
-}
-
-::-webkit-scrollbar-thumb {
-    background: rgb(70, 70, 70);
-    border-radius: 5px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background: #555;
-}
-
-/*SCROLL BAR DESIGN*/
-
-.noSelect {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-/*HEADER*/
-
-.page {
-    position: fixed;
-    height: 100%;
-    width: 100%;
-    top: 89px;
-    overflow: auto;
-}
-
-.content {
-    height: 100%;
-    width: 100%;
-}
-
-.header {
-    position: fixed;
-    width: 75%;
-    padding: 10px;
-    border-bottom: 2px solid white;
-    z-index: 10;
-    left: 0;
-    right: 0;
-    margin: auto;
-    background-color: transparent;
-}
-
-.header-content {
-    margin-top: -15px;
-    z-index: 10;
-}
-
-.header-content a {
-    text-decoration: none;
-}
-
-.logo {
-    width: 52px;
-    height: 52px;
-    border-radius: 50%;
-    border: 1.75px solid white;
-    float: left;
-    z-index: 10;
-}
-
-.logoName {
-    position: relative;
-    top: 9px;
-    left: 10px;
-    width: 275px;
-    z-index: 10;
-    color: white;
-}
-
-.ln {
-    color: white;
-    text-decoration: none;
-}
-
-.nav {
-    margin-top: -55px;
-    float: right;
-    z-index: 10;
-}
-
-.nav a {
-    float: right;
-    text-align: center;
-    margin-left: 10px;
-    margin-right: 10px;
-    color: white;
-    text-decoration: none;
-    margin-top: 15px;
-    z-index: 10;
-}
-
-.nav a:hover {
-    cursor: pointer;
-    color: rgb(168, 168, 168);
-}
-
-.nav .t:hover {
-    cursor: pointer;
-    color: rgb(185, 185, 185);
-    z-index: 10;
-}
-
-/*HERO*/
-
-.hero {
-    top: 0;
-    width: 100%;
-    min-height: 500px;
-    height: 100%;
-    text-align: center;
-    position: relative;
-    margin-top: -90px;
-}
-
-.hero .Title {
-    font-size: 55px;
-    font-weight: bolder;
-}
-
-.hero .Under {
-    font-size: 25px;
-    margin-top: -30px;
-}
-
-.hero .MoreButton {
-    border: 2px solid white;
-    border-radius: 10px;
-    color: white;
-    font-size: 20px;
-    padding: 10px 25px 10px 25px;
-    background-color: transparent;
-}
-
-.hero .MoreButton:focus {
-    outline: none;
-}
-
-.hero .MoreButton:hover {
-    cursor: pointer;
-    transform: scale(1.05);
-}
-
-.heroObj {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.invert {
-    filter: invert(100);
-}
-
-.icons {
-    text-align: center;
-    padding-top: 50px;
-}
-
-.icons img {
-    margin-right: 10px;
-    margin-left: 10px;
-    width: 52px;
-}
-
-.icons img:hover {
-    transform: scale(1.1);
-    cursor: pointer;
-}
-
-.users {
-    width: 100%;
-    background: rgba(0, 0, 0, 0.884);
-    padding: 10px 0px 10px 0px;
-    text-align: center;
-    font-size: 35px;
-}
-
-.users p {
-    margin-left: 5px;
-    margin-right: 5px;
-}
-
-/*ABOUT US*/
-
-.AboutUsTitle {
-    text-align: center;
-    font-size: 45px;
-    margin-top: 175px;
-    font-weight: bolder;
-}
-
-.AboutUsParagraph {
-    text-align: center;
-    margin-left: 5px;
-    margin-right: 5px;
-}
-
-.AboutUsParagraph p {
-    font-size: 20px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-.AboutUsParagraph p a {
-    color: rgb(152, 212, 236);
-}
-
-/*Footer*/
-
-.footer {
-    height: fit-content;
-    background: rgba(0, 0, 0, 0.938);
-    color: white;
-    padding-bottom: 110px;
-    margin-top: 250px;
-    text-align: center;
-}
-
-.footerIcons {
-    width: fit-content;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.footerIcons img {
-    width: 52px;
-    margin-top: 25px;
-    margin-right: 5px;
-    margin-left: 5px;
-}
-
-.footerIcons img:hover {
-    cursor: pointer;
-    transform: scale(1.05);
-}
-
-/*RESPONSIVENESS FOR HOME PAGE*/
-
-@media screen and (max-width: 1000px) {
-    /*NAV*/
-    .logoName {
-        position: relative;
-        top: 9px;
-        left: 10px;
-        width: 275px;
-        z-index: 10;
-        color: white;
-        visibility: hidden;
-    }
-    /*END OF NAV*/
-}
-
-@media screen and (max-width: 700px) {
-    .logo {
-        width: 52px;
-        height: 52px;
-        border-radius: 50%;
-        border: 1.75px solid white;
-        z-index: 10;
-        display: block;
-        float: none;
-        text-align: center;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    .header {
-        position: fixed;
-        width: 75%;
-        border-bottom: 2px solid white;
-        z-index: 10;
-        left: 0;
-        right: 0;
-        margin: auto;
-        background-color: transparent;
-    }
-    .header-content {
-        padding: 0;
-        z-index: 10;
-        padding: 0;
-        margin: 0;
-    }
-    .logoName {
-        position: relative;
-        top: 9px;
-        left: 10px;
-        width: 275px;
-        z-index: 10;
-        color: white;
-        visibility: hidden;
-    }
-    .nav {
-        margin-top: -50px;
-        z-index: 10;
-        text-align: center;
-    }
-    .nav a {
-        float: none;
-        text-align: center;
-        margin-left: 10px;
-        margin-right: 10px;
-        color: white;
-        text-decoration: none;
-        z-index: 10;
-    }
-    .nav .t:hover {
-        cursor: pointer;
-        color: rgb(185, 185, 185);
-        z-index: 10;
-    }
-    .hero {
-        top: 0;
-        width: 100%;
-        min-height: 500px;
-        height: 100%;
-        text-align: center;
-        position: relative;
-        margin-top: -90px;
-    }
-    .page {
-        position: fixed;
-        top: 157px;
-        overflow: auto;
-    }
-    ::-webkit-scrollbar-track {
-        background: gainsboro;
-        border-radius: 5px;
-        margin-bottom: 157px;
-    }
-    .footer {
-        height: fit-content;
-        background: rgba(0, 0, 0, 0.938);
-        color: white;
-        padding-bottom: 175px;
-        margin-top: 250px;
-        text-align: center;
-    }
-}
-
-@media screen and (max-width: 620px) {
-    .page {
-        position: fixed;
-        height: 100%;
-        width: 100%;
-        top: 159px;
-        overflow: auto;
-    }
-    .hero .Title {
-        font-size: 25px;
-        font-weight: bolder;
-    }
-    .hero .Under {
-        margin-top: -15px;
-        font-size: 20px;
-    }
-    .users p {
-        margin-left: 5px;
-        margin-right: 5px;
-        font-size: 25px;
-    }
-    .hero .MoreButton {
-        border: 2px solid white;
-        border-radius: 10px;
-        color: white;
-        font-size: 15px;
-        padding: 10px 25px 10px 25px;
-        background-color: transparent;
-    }
-    .AboutUsParagraph p {
-        font-size: 18px;
-    }
-}
-
-@media screen and (max-width: 313px) {
-    .page {
-        position: fixed;
-        height: 100%;
-        width: 100%;
-        top: 165px;
-        overflow: auto;
-    }
-}
-
-@media screen and (max-width: 259px) {
-    .page {
-        position: fixed;
-        height: 100%;
-        width: 100%;
-        top: 165px;
-        overflow: auto;
-    }
-}
-
-.DiscordEmbed {
-    display: block;
-    margin-top: 100px;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-}
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,500,80);*{scroll-behavior:smooth}body,html{font-family:Montserrat,sans-serif;background:#23272a;background:linear-gradient(135deg,#23272a 0,#23272a 100%);height:100%;width:100%;margin:0;padding:0;overflow-x:hidden;color:#fff;background-image:url(https://arcticstudio.netlify.app/Storage/background.webp);background-position:center;background-repeat:no-repeat;background-attachment:fixed;background-size:cover}a{color:#98d4ec}a:hover{cursor:pointer}::-webkit-scrollbar{width:5px}::-webkit-scrollbar-track{background:#dcdcdc;border-radius:5px;margin-bottom:89px}::-webkit-scrollbar-thumb{background:#464646;border-radius:5px}::-webkit-scrollbar-thumb:hover{background:#555}.noSelect{-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}.page{position:fixed;height:100%;width:100%;top:89px;overflow:auto}.content{height:100%;width:100%}.header{position:fixed;width:75%;padding:10px;border-bottom:2px solid #fff;z-index:10;left:0;right:0;margin:auto;background-color:transparent}.header-content{margin-top:-15px;z-index:10}.header-content a{text-decoration:none}.logo{width:52px;height:52px;border-radius:50%;border:1.75px solid #fff;float:left;z-index:10}.logoName{position:relative;top:9px;left:10px;width:275px;z-index:10;color:#fff}.ln{color:#fff;text-decoration:none}.nav{margin-top:-55px;float:right;z-index:10}.nav a{float:right;text-align:center;margin-left:10px;margin-right:10px;color:#fff;text-decoration:none;margin-top:15px;z-index:10}.nav a:hover{cursor:pointer;color:#a8a8a8}.nav .t:hover{cursor:pointer;color:#b9b9b9;z-index:10}.hero{top:0;width:100%;min-height:500px;height:100%;text-align:center;position:relative;margin-top:-90px}.hero .Title{font-size:55px;font-weight:bolder}.hero .Under{font-size:25px;margin-top:-30px}.hero .MoreButton{border:2px solid #fff;border-radius:10px;color:#fff;font-size:20px;padding:10px 25px 10px 25px;background-color:transparent}.hero .MoreButton:focus{outline:0}.hero .MoreButton:hover{cursor:pointer;transform:scale(1.05)}.heroObj{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%)}.invert{filter:invert(100)}.icons{text-align:center;padding-top:50px}.icons img{margin-right:10px;margin-left:10px;width:52px}.icons img:hover{transform:scale(1.1);cursor:pointer}.users{width:100%;background:rgba(0,0,0,.884);padding:10px 0 10px 0;text-align:center;font-size:35px}.users p{margin-left:5px;margin-right:5px}.AboutUsTitle{text-align:center;font-size:45px;margin-top:175px;font-weight:bolder}.AboutUsParagraph{text-align:center;margin-left:5px;margin-right:5px}.AboutUsParagraph p{font-size:20px;margin-top:10px;margin-bottom:10px}.AboutUsParagraph p a{color:#98d4ec}.footer{height:fit-content;background:rgba(0,0,0,.938);color:#fff;padding-bottom:110px;margin-top:250px;text-align:center}.footerIcons{width:fit-content;margin-left:auto;margin-right:auto}.footerIcons img{width:52px;margin-top:25px;margin-right:5px;margin-left:5px}.footerIcons img:hover{cursor:pointer;transform:scale(1.05)}@media screen and (max-width:1000px){.logoName{position:relative;top:9px;left:10px;width:275px;z-index:10;color:#fff;visibility:hidden}}@media screen and (max-width:700px){.logo{width:52px;height:52px;border-radius:50%;border:1.75px solid #fff;z-index:10;display:block;float:none;text-align:center;margin-left:auto;margin-right:auto}.header{position:fixed;width:75%;border-bottom:2px solid #fff;z-index:10;left:0;right:0;margin:auto;background-color:transparent}.header-content{padding:0;z-index:10;padding:0;margin:0}.logoName{position:relative;top:9px;left:10px;width:275px;z-index:10;color:#fff;visibility:hidden}.nav{margin-top:-50px;z-index:10;text-align:center}.nav a{float:none;text-align:center;margin-left:10px;margin-right:10px;color:#fff;text-decoration:none;z-index:10}.nav .t:hover{cursor:pointer;color:#b9b9b9;z-index:10}.hero{top:0;width:100%;min-height:500px;height:100%;text-align:center;position:relative;margin-top:-90px}.page{position:fixed;top:157px;overflow:auto}::-webkit-scrollbar-track{background:#dcdcdc;border-radius:5px;margin-bottom:157px}.footer{height:fit-content;background:rgba(0,0,0,.938);color:#fff;padding-bottom:175px;margin-top:250px;text-align:center}}@media screen and (max-width:620px){.page{position:fixed;height:100%;width:100%;top:159px;overflow:auto}.hero .Title{font-size:25px;font-weight:bolder}.hero .Under{margin-top:-15px;font-size:20px}.users p{margin-left:5px;margin-right:5px;font-size:25px}.hero .MoreButton{border:2px solid #fff;border-radius:10px;color:#fff;font-size:15px;padding:10px 25px 10px 25px;background-color:transparent}.AboutUsParagraph p{font-size:18px}}@media screen and (max-width:313px){.page{position:fixed;height:100%;width:100%;top:165px;overflow:auto}}@media screen and (max-width:259px){.page{position:fixed;height:100%;width:100%;top:165px;overflow:auto}}.DiscordEmbed{display:block;margin-top:100px;margin-left:auto;margin-right:auto;text-align:center}
